images border-radius issue solved on small screens

--- a/css/main.css
+++ b/css/main.css
@@ -727,6 +727,10 @@ body {
 }
 
 @media only screen and (min-width: 280px) and (max-width: 540px) {
+  img {
+    object-fit: cover;
+  }
+
   html {
     font-size: 70%;
   }
